--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <html>
-  <head>
-    <title>RxJs</title>
-  </head>
-  <body>
-    <div>Hello</div>
-    <script src="app.js"></script>
-  </body>
-  </html>
+
+<head>
+  <title>RxJs</title>
+  <style>
+    #circle {
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background-color: red;
+      position: absolute;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="circle"></div>
+  <script src="app.js"></script>
+</body>
+
+</html>
